# uk-tides-mcp

./: Makefile  README.md  pyproject.toml  tides.py
.github/workflows/: inspect.yml  prompt.yml  release.yml
