[project]
name = "uk-tides-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server for UK low & high beach tides"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.4",
]

license = {text = "Apache-2.0"}

authors = [
    {name = "Kai Hendry" }
    ]